Source/WebCore/page/scrolling/nicosia/ScrollingTreeNicosia.h
@@ -41,6 +41,8 @@ private:
     explicit ScrollingTreeNicosia(AsyncScrollingCoordinator&);
 
     Ref<ScrollingTreeNode> createScrollingTreeNode(ScrollingNodeType, ScrollingNodeID) override;
+
+    RefPtr<ScrollingTreeNode> scrollingNodeForPoint(FloatPoint) final;
 };
 
 } // namespace WebCore
